поменял название классов и добавил линки

--- a/OksGroup/About/About.html
+++ b/OksGroup/About/About.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="About_company.css">
+    <link rel="stylesheet" href="About.css">
     <title>Document</title>
 </head>
 
@@ -12,22 +12,22 @@
     <div class="Progect_company">
         <div class="Logo">
             <div class="Logo_OKS">
-                <img class="Logo_img" src="../About_company/img/OKS GROUP.svg" alt="">
-                <a href="">Проекты</a>
-                <a class="" href="">Квартиры</a>
-                <a href="">Ипотека</a>
-                <a href="">Производство</a>
-                <a class="a_blue" href="">О компании</a>
-                <a href="">Контакты</a>
+                <img class="Logo_img" src="img/OKS GROUP.svg" alt="">
+                <a class="blue" href="../Main/Main.html">Проекты</a>
+                <a class="" href="../Appartment/Appartment.html">Квартиры</a>
+                <a href="../Mortgage/Mortgage.html">Ипотека</a>
+                <a href="../Manufacturing/Manufacturing.html">Производство</a>
+                <a href="../About/About.html">О компании</a>
+                <a href="../Contact/Contact.html">Контакты</a>
                 <div class="whatchap">
-                    <img class="whatchap_img" src="../About_company/img/whatsap_icon.svg" alt="">
+                    <img class="whatchap_img" src="img/whatsap_icon.svg" alt="">
                     <span class="whatchap_number">+7 778 006 90 80</span>
                 </div>
                 <div class="language">
                     <span class="language_Ru">Ru</span>
                 </div>
                 <div class="heart">
-                    <img class="love" src="../About_company/img/heart_icon.svg" alt="">
+                    <img class="love" src="img/heart_icon.svg" alt="">
                 </div>
             </div>
         </div>
@@ -39,9 +39,9 @@
             <h1>О компании</h1>
         </div>
         <div class="OKS_GROUP">
-            <img src="../About_company/img/House_Preview.svg" alt="">
+            <img src="img/House_Preview.svg" alt="">
             <div class="message">
-                <img src="../About_company/img/message_icon.svg" alt="">
+                <img src="img/message_icon.svg" alt="">
             </div>
         </div>
         <hr class="First_hr">
@@ -49,37 +49,32 @@
             <h1 class="Advantages_h1">Преимущества</h1>
             <div class="Advantages_block">
                 <div class="block_one">
-                    <img class="block_img" src="../About_company/img/dom_icon.svg" alt="">
+                    <img class="block_img" src="img/dom_icon.svg" alt="">
                     <h1>Техническая база</h1>
-                    <p>Материально-техническая база компании OKS позволяет <br> проводить строительные работы разной
-                        сложности</p>
+                    <p>Материально-техническая база компании OKS позволяет проводить строительные работы разной сложности</p>
                 </div>
                 <div class="block_one">
-                    <img class="block_img" src="../About_company/img/aim_icon.svg" alt="">
+                    <img class="block_img" src="img/aim_icon.svg" alt="">
                     <h1>Конструкторское бюро</h1>
-                    <p>Материально-техническая база компании OKS позволяет проводить строительные работы разной
-                        сложности</p>
+                    <p>Материально-техническая база компании OKS позволяет проводить строительные работы разной сложности</p>
                 </div>
                 <div class="block_one">
-                    <img class="block_img" src="../About_company/img/head_icon.svg" alt="">
+                    <img class="block_img" src="img/head_icon.svg" alt="">
                     <h1>Профессиональная команда</h1>
                     <p>Команда компании OKS — это специалисты высокого уровня и квалификации</p>
                 </div>
                 <div class="block_one">
-                    <img class="block_img" src="../About_company/img/hammer_icon.svg" alt="">
+                    <img class="block_img" src="img/hammer_icon.svg" alt="">
                     <h1>Юридическая поддержка</h1>
-                    <p class="wid">Качество и своевременное исполнение обязательств — это самое главное, на что делает
-                        ставку
-                        компания</p>
+                    <p class="wid">Качество и своевременное исполнение обязательств — это самое главное, на что делает ставку компания</p>
                 </div>
                 <div class="block_one">
-                    <img class="block_img" src="../About_company/img/time_icon.svg" alt="">
+                    <img class="block_img" src="img/time_icon.svg" alt="">
                     <h1>Соблюдение сроков</h1>
-                    <p>Одним из приоритетов для компании OKS является неукоснительное соблюдение сроков договора
-                        строительных работ</p>
+                    <p>Одним из приоритетов для компании OKS является неукоснительное соблюдение сроков договора строительных работ</p>
                 </div>
                 <div class="block_one">
-                    <img class="block_img" src="../About_company/img/like_icon.svg" alt="">
+                    <img class="block_img" src="img/like_icon.svg" alt="">
                     <h1>Надежное партнерство</h1>
                     <p>Компания OKS нацелена на крепкое партнерство, основанное на взаимном доверии</p>
                 </div>
@@ -89,25 +84,25 @@
             <h1 class="Guide_h1">Руководство</h1>
             <div class="Guide_Director">
                 <div class="Guide_block">
-                    <img class="Director" src="../About_company/img/director_img.svg" alt="">
+                    <img class="Director" src="img/director_img.svg" alt="">
                     <h1>Куртаев Асылжан Алимжанович</h1>
                     <p>Директор</p>
                     <div class="yellow"></div>
                 </div>
                 <div class="Guide_block">
-                    <img class="Director" src="../About_company/img/dicrector_img_gray.svg" alt="">
+                    <img class="Director" src="img/dicrector_img_gray.svg" alt="">
                     <h1 class="gray_h1">Куртаев Асылжан Алимжанович</h1>
                     <p class="gray_h1">Директор</p>
                     <div class="gray"></div>
                 </div>
                 <div class="Guide_block">
-                    <img class="Director" src="../About_company/img/dicrector_img_gray.svg" alt="">
+                    <img class="Director" src="img/dicrector_img_gray.svg" alt="">
                     <h1 class="gray_h1">Куртаев Асылжан Алимжанович</h1>
                     <p class="gray_h1">Директор</p>
                     <div class="gray"></div>
                 </div>
                 <div class="Guide_block">
-                    <img class="Director" src="../About_company/img/dicrector_img_gray.svg" alt="">
+                    <img class="Director" src="img/dicrector_img_gray.svg" alt="">
                     <h1 class="gray_h1">Куртаев Асылжан Алимжанович</h1>
                     <p class="gray_h1">Директор</p>
                     <div class="gray"></div>
@@ -119,7 +114,7 @@
             <div class="zavod_main">
                 <div class="zavod_h1">
                     <h1 class="blue">2001</h1>
-                    <h1 class="blue silver ">2006 - 2010</h1>
+                    <h1 class="blue silver">2006 - 2010</h1>
                     <h1 class="blue silver">2012</h1>
                     <h1 class="blue silver">2012 - 2014</h1>
                     <h1 class="blue silver">2015</h1>
@@ -141,23 +136,19 @@
             </div>
             <h1 class="zavod_text_h1">В начале пути</h1>
             <div class="zavod_text">
-                <p>Группа компаний<span> «Оңтүстік Құрылыс Сервис»</span> была основана <span> в 2001 году.</span>
-                    Компания была
-                    создана на основе одного из крупнейших производителей строительных материалов города Шымкент —
-                    завода железобетонных изделий № 2 треста <span>«Чимкентпромстрой»</span></p>
-                <p>Изначально компания работала и позиционировала себя как производственная и предлагала строительные
-                    материалы высокого качества.</p>
+                <p>Группа компаний<span> «Оңтүстік Құрылыс Сервис»</span> была основана <span> в 2001 году.</span> Компания была создана на основе одного из крупнейших производителей строительных материалов города Шымкент — завода железобетонных изделий № 2 треста <span>«Чимкентпромстрой»</span></p>
+                <p>Изначально компания работала и позиционировала себя как производственная и предлагала строительные материалы высокого качества.</p>
             </div>
         </div>
         <hr class="last_hr">
         <div class="Footer">
-            <img class="Footer_img" src="../About_company/img/OKS GROUP_gray.svg" alt="">
+            <img class="Footer_img" src="img/OKS GROUP_gray.svg" alt="">
             <div class="Footer_one">
-                <img class="phone_1" src="../About_company/img/phone_icon.svg" alt="">
-                <img class="phone_2" src="../About_company/img/pin_drop_icon.svg" alt="">
-                <img class="phone_3" src="../About_company/img/place_icon.svg" alt="">
-                <img class="phone_4" src="../About_company/img/chat_icon.svg" alt="">
-                <img class="phone_5" src="../About_company/img/instagram_icon.svg" alt="">
+                <img class="phone_1" src="img/phone_icon.svg" alt="">
+                <img class="phone_2" src="img/pin_drop_icon.svg" alt="">
+                <img class="phone_3" src="img/place_icon.svg" alt="">
+                <img class="phone_4" src="img/chat_icon.svg" alt="">
+                <img class="phone_5" src="img/instagram_icon.svg" alt="">
                 <p>+7 778 006 90 80</p>
                 <span>Микрорайон Нурсат, <br>
                     172а — ЖК Бахыт</span>
@@ -179,14 +170,14 @@
             </div>
             <div class="Footer_three">
                 <h1>Меню</h1>
-                <p>Проекты</p>
-                <p>Квартиры</p>
-                <p>Ипотека</p>
-                <p>Производство</p>
-                <p>О компании</p>
-                <p>Контакты</p>
+                <a href="../Main/Main.html">Проекты</a>
+                <a href="../Appartment/Appartment.html">Квартиры</a>
+                <a href="../Mortgage/Mortgage.html">Ипотека</a>
+                <a href="../Manufacturing/Manufacturing.html">Производство</a>
+                <a class="company" href="../About/About.html">О компании</a>
+                <a href="../Contact/Contact.html">Контакты</a>
             </div>
-            <img class="last_img" src="../About_company/img/Footer_icon.svg" alt="">
+            <img class="last_img" src="img/Footer_icon.svg" alt="">
         </div>
     </div>
 </body>
