--- a/OksGroup/About/Modal/Modal.html
+++ b/OksGroup/About/Modal/Modal.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="director_logo.css">
+    <link rel="stylesheet" href="Modal.css">
     <title>Document</title>
 </head>
 
 <body>
     <div class="director_logo">
-        <img class="Director_img" src="../director_logo/img/director_img.svg" alt="">
+        <img class="Director_img" src="../Modal/img/director_img.svg" alt="">
         <div class="director_logo_text">
             <h1>Куртаев Асылжан Алимжанович</h1>
             <p class="Director">Директор</p>
@@ -49,7 +49,7 @@
             <p>Строительства завода республиканского значения по производству цемента ТОО <span>«Стандарт
                     Цемент».</span></p>
         </div>
-        <img class="zavod_img" src="../director_logo/img/zavod.svg" alt="">
+        <img class="zavod_img" src="../Modal/img/zavod.svg" alt="">
     </div>
 </body>
 
