--- a/OksGroup/Appartment/Appartment.html
+++ b/OksGroup/Appartment/Appartment.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="flat.css">
+    <link rel="stylesheet" href="Appartment.css">
     <title>Document</title>
 </head>
 
@@ -12,22 +12,22 @@
     <div class="Progect_flat">
         <div class="Logo">
             <div class="Logo_OKS">
-                <img class="Logo_img" src="../flat/img/OKS GROUP.svg" alt="">
-                <a href="">Проекты</a>
-                <a class="" href="">Квартиры</a>
-                <a href="">Ипотека</a>
-                <a href="">Производство</a>
-                <a class="a_blue" href="">О компании</a>
-                <a href="">Контакты</a>
+                <img class="Logo_img" src="img/OKS GROUP.svg" alt="">
+                <a class="blue" href="../Main/Main.html">Проекты</a>
+                <a class="" href="../Appartment/Appartment.html">Квартиры</a>
+                <a href="../Mortgage/Mortgage.html">Ипотека</a>
+                <a href="../Manufacturing/Manufacturing.html">Производство</a>
+                <a href="../About/About.html">О компании</a>
+                <a href="../Contact/Contact.html">Контакты</a>
                 <div class="whatchap">
-                    <img class="whatchap_img" src="../flat/img/whatsap_icon.svg" alt="">
+                    <img class="whatchap_img" src="img/whatsap_icon.svg" alt="">
                     <span class="whatchap_number">+7 778 006 90 80</span>
                 </div>
                 <div class="language">
                     <span class="language_Ru">Ru</span>
                 </div>
                 <div class="heart">
-                    <img class="love" src="../flat/img/heart_icon.svg" alt="">
+                    <img class="love" src="img/heart_icon.svg" alt="">
                 </div>
             </div>
         </div>
@@ -43,7 +43,7 @@
             <div class="one_block">
                 <p class="block_p">Выберите блока</p>
                 <input class="one_input" type="text" placeholder="Любой">
-                <img class="input_img" src="../flat/img/aim.svg" alt="">
+                <img class="input_img" src="img/aim.svg" alt="">
             </div>
             <div class="two_block">
                 <p class="block_p">Укажите количество комнат</p>
@@ -80,22 +80,22 @@
                 <p class="block_one_p">Найдено 1 220 планировки</p>
                 <div class="block_one_coop">
                     <div class="start">
-                        <img class="forthen" src="../flat/img/double_arrows.svg" alt="">
+                        <img class="forthen" src="img/double_arrows.svg" alt="">
                         <p>Сначала дешевле</p>
-                        <img class="seventen" src="../flat/img/aim.svg" alt="">
+                        <img class="seventen" src="img/aim.svg" alt="">
                     </div>
-                    <img class="yellow" src="../flat/img/taxicop_icon.svg" alt="">
-                    <img class="yellow" src="../flat/img/mini_map_icon.svg" alt="">
+                    <img class="yellow" src="img/taxicop_icon.svg" alt="">
+                    <img class="yellow" src="img/mini_map_icon.svg" alt="">
                 </div>
             </div>
             <div class="many_blocks">
                 <div class="message">
-                    <img src="../flat/img/message_icon.svg" alt="">
+                    <img src="img/message_icon.svg" alt="">
                 </div>
                 <div class="many_block_one">
                     <p class="blue_p">Шанхай 1</p>
                     <p class="gray_p">Аль-Фараби 142А</p>
-                    <img class="more" src="../flat/img/flat.svg" alt="">
+                    <img class="more" src="img/flat.svg" alt="">
                     <h1 class="many_block_one_h1">35 234 433 тнг</h1>
                     <span class="gray_p left">35 234 433 тнг</span>
                     <p class="new_p_gray">Выберите проект <span>*</span> <span class="new_p_blue">От 140 000 тнг/мес.</span></p>
@@ -107,7 +107,7 @@
                 <div class="many_block_one">
                     <p class="blue_p">Шанхай 1</p>
                     <p class="gray_p">Аль-Фараби 142А</p>
-                    <img class="more" src="../flat/img/flat.svg" alt="">
+                    <img class="more" src="img/flat.svg" alt="">
                     <h1 class="many_block_one_h1">35 234 433 тнг</h1>
                     <span class="gray_p left">35 234 433 тнг</span>
                     <p class="new_p_gray">Выберите проект <span>*</span> <span class="new_p_blue">От 140 000 тнг/мес.</span></p>
@@ -120,7 +120,7 @@
                 <div class="many_block_one">
                     <p class="blue_p">Шанхай 1</p>
                     <p class="gray_p">Аль-Фараби 142А</p>
-                    <img class="more" src="../flat/img/flat.svg" alt="">
+                    <img class="more" src="img/flat.svg" alt="">
                     <h1 class="many_block_one_h1">35 234 433 тнг</h1>
                     <span class="gray_p left">35 234 433 тнг</span>
                     <p class="new_p_gray">Выберите проект <span>*</span> <span class="new_p_blue">От 140 000 тнг/мес.</span></p>
@@ -132,7 +132,7 @@
                 <div class="many_block_one">
                     <p class="blue_p">Шанхай 1</p>
                     <p class="gray_p">Аль-Фараби 142А</p>
-                    <img class="more" src="../flat/img/flat.svg" alt="">
+                    <img class="more" src="img/flat.svg" alt="">
                     <h1 class="many_block_one_h1">35 234 433 тнг</h1>
                     <span class="gray_p left">35 234 433 тнг</span>
                     <p class="new_p_gray">Выберите проект <span>*</span> <span class="new_p_blue">От 140 000 тнг/мес.</span></p>
@@ -145,7 +145,7 @@
                 <div class="many_block_one">
                     <p class="blue_p">Шанхай 1</p>
                     <p class="gray_p">Аль-Фараби 142А</p>
-                    <img class="more" src="../flat/img/flat.svg" alt="">
+                    <img class="more" src="img/flat.svg" alt="">
                     <h1 class="many_block_one_h1">35 234 433 тнг</h1>
                     <span class="gray_p left">35 234 433 тнг</span>
                     <p class="new_p_gray">Выберите проект <span>*</span> <span class="new_p_blue">От 140 000 тнг/мес.</span></p>
@@ -157,7 +157,7 @@
                 <div class="many_block_one">
                     <p class="blue_p">Шанхай 1</p>
                     <p class="gray_p">Аль-Фараби 142А</p>
-                    <img class="more" src="../flat/img/flat.svg" alt="">
+                    <img class="more" src="img/flat.svg" alt="">
                     <h1 class="many_block_one_h1">35 234 433 тнг</h1>
                     <span class="gray_p left">35 234 433 тнг</span>
                     <p class="new_p_gray">Выберите проект <span>*</span> <span class="new_p_blue">От 140 000 тнг/мес.</span></p>
@@ -170,7 +170,7 @@
                 <div class="many_block_one">
                     <p class="blue_p">Шанхай 1</p>
                     <p class="gray_p">Аль-Фараби 142А</p>
-                    <img class="more" src="../flat/img/flat.svg" alt="">
+                    <img class="more" src="img/flat.svg" alt="">
                     <h1 class="many_block_one_h1">35 234 433 тнг</h1>
                     <span class="gray_p left">35 234 433 тнг</span>
                     <p class="new_p_gray">Выберите проект <span>*</span> <span class="new_p_blue">От 140 000 тнг/мес.</span></p>
@@ -183,7 +183,7 @@
                 <div class="many_block_one">
                     <p class="blue_p">Шанхай 1</p>
                     <p class="gray_p">Аль-Фараби 142А</p>
-                    <img class="more" src="../flat/img/flat.svg" alt="">
+                    <img class="more" src="img/flat.svg" alt="">
                     <h1 class="many_block_one_h1">35 234 433 тнг</h1>
                     <span class="gray_p left">35 234 433 тнг</span>
                     <p class="new_p_gray">Выберите проект <span>*</span> <span class="new_p_blue">От 140 000 тнг/мес.</span></p>
@@ -195,7 +195,7 @@
                 <div class="many_block_one">
                     <p class="blue_p">Шанхай 1</p>
                     <p class="gray_p">Аль-Фараби 142А</p>
-                    <img class="more" src="../flat/img/flat.svg" alt="">
+                    <img class="more" src="img/flat.svg" alt="">
                     <h1 class="many_block_one_h1">35 234 433 тнг</h1>
                     <span class="gray_p left">35 234 433 тнг</span>
                     <p class="new_p_gray">Выберите проект <span>*</span> <span class="new_p_blue">От 140 000 тнг/мес.</span></p>
@@ -207,7 +207,7 @@
                 <div class="many_block_one">
                     <p class="blue_p">Шанхай 1</p>
                     <p class="gray_p">Аль-Фараби 142А</p>
-                    <img class="more" src="../flat/img/flat.svg" alt="">
+                    <img class="more" src="img/flat.svg" alt="">
                     <h1 class="many_block_one_h1">35 234 433 тнг</h1>
                     <span class="gray_p left">35 234 433 тнг</span>
                     <p class="new_p_gray">Выберите проект <span>*</span> <span class="new_p_blue">От 140 000 тнг/мес.</span></p>
@@ -220,7 +220,7 @@
                 <div class="many_block_one">
                     <p class="blue_p">Шанхай 1</p>
                     <p class="gray_p">Аль-Фараби 142А</p>
-                    <img class="more" src="../flat/img/flat.svg" alt="">
+                    <img class="more" src="img/flat.svg" alt="">
                     <h1 class="many_block_one_h1">35 234 433 тнг</h1>
                     <span class="gray_p left">35 234 433 тнг</span>
                     <p class="new_p_gray">Выберите проект <span>*</span> <span class="new_p_blue">От 140 000 тнг/мес.</span></p>
@@ -232,7 +232,7 @@
                 <div class="many_block_one">
                     <p class="blue_p">Шанхай 1</p>
                     <p class="gray_p">Аль-Фараби 142А</p>
-                    <img class="more" src="../flat/img/flat.svg" alt="">
+                    <img class="more" src="img/flat.svg" alt="">
                     <h1 class="many_block_one_h1">35 234 433 тнг</h1>
                     <span class="gray_p left">35 234 433 тнг</span>
                     <p class="new_p_gray">Выберите проект <span>*</span> <span class="new_p_blue">От 140 000 тнг/мес.</span></p>
@@ -249,13 +249,13 @@
         </div>
         <hr class="last_hr">
         <div class="Footer">
-            <img class="Footer_img" src="../flat/img/OKS GROUP_gray.svg" alt="">
+            <img class="Footer_img" src="img/OKS GROUP_gray.svg" alt="">
             <div class="Footer_one">
-                <img class="phone_1" src="../flat/img/phone_icon.svg" alt="">
-                <img class="phone_2" src="../flat/img/pin_drop_icon.svg" alt="">>
-                <img class="phone_3" src="../flat/img/place_icon.svg" alt="">
-                <img class="phone_4" src="../flat/img/chat_icon.svg" alt="">
-                <img class="phone_5" src="../flat/img/instagram_icon.svg" alt="">
+                <img class="phone_1" src="img/phone_icon.svg" alt="">
+                <img class="phone_2" src="img/pin_drop_icon.svg" alt="">>
+                <img class="phone_3" src="img/place_icon.svg" alt="">
+                <img class="phone_4" src="img/chat_icon.svg" alt="">
+                <img class="phone_5" src="img/instagram_icon.svg" alt="">
                 <p>+7 778 006 90 80</p>
                 <span>Микрорайон Нурсат, <br>
                     172а — ЖК Бахыт</span>
@@ -277,14 +277,14 @@
             </div>
             <div class="Footer_three">
                 <h1>Меню</h1>
-                <p>Проекты</p>
-                <p>Квартиры</p>
-                <p>Ипотека</p>
-                <p>Производство</p>
-                <p>О компании</p>
-                <p>Контакты</p>
+                <a href="../Main/Main.html">Проекты</a>
+                <a href="../Appartment/Appartment.html">Квартиры</a>
+                <a href="../Mortgage/Mortgage.html">Ипотека</a>
+                <a href="../Manufacturing/Manufacturing.html">Производство</a>
+                <a class="company" href="../About/About.html">О компании</a>
+                <a href="../Contact/Contact.html">Контакты</a>
             </div>
-            <img class="last_img" src="../flat/img/Footer_icon.svg" alt="">
+            <img class="last_img" src="img/Footer_icon.svg" alt="">
         </div>
     </div>
     </div>
