--- a/OksGroup/Asar/Asar.html
+++ b/OksGroup/Asar/Asar.html
@@ -12,22 +12,22 @@
     <div class="Progect_2">
         <div class="Logo">
             <div class="Logo_OKS">
-                <img class="Logo_img" src="../Asar/img/OKS GROUP.svg" alt="">
-                <a class="blue" href="">Проекты</a>
-                <a class="" href="">Квартиры</a>
-                <a href="">Ипотека</a>
-                <a href="">Производство</a>
-                <a href="">О компании</a>
-                <a href="">Контакты</a>
+                <img class="Logo_img" src="img/OKS GROUP.svg" alt="">
+                <a class="blue" href="../Main/Main.html">Проекты</a>
+                <a class="" href="../Appartment/Appartment.html">Квартиры</a>
+                <a href="../Mortgage/Mortgage.html">Ипотека</a>
+                <a href="../Manufacturing/Manufacturing.html">Производство</a>
+                <a href="../About/About.html">О компании</a>
+                <a href="../Contact/Contact.html">Контакты</a>
                 <div class="whatchap">
-                    <img class="whatchap_img" src="../Asar/img/whatsap_icon.svg" alt="">
+                    <img class="whatchap_img" src="img/whatsap_icon.svg" alt="">
                     <span class="whatchap_number">+7 778 006 90 80</span>
                 </div>
                 <div class="language">
                     <span class="language_Ru">Ru</span>
                 </div>
                 <div class="heart">
-                    <img class="love" src="../Asar/img/heart_icon.svg" alt="">
+                    <img class="love" src="img/heart_icon.svg" alt="">
                 </div>
             </div>
         </div>
@@ -38,17 +38,17 @@
             </div>
             <div class="Asar_house">
                 <h1>Asar house Plus</h1>
-                <img src="../Asar/img/AlphaRabi_line.svg" alt="">
+                <img src="img/AlphaRabi_line.svg" alt="">
             </div>
         </div>
         <div class="Asar_plus">
-            <img class="Asar_plus_img" src="../Asar/img/House_Preview.svg" alt="">
+            <img class="Asar_plus_img" src="img/House_Preview.svg" alt="">
             <button class="Asar_plus_btn">Старт продаж!</button>
             <button class="Asar_plus_btn2">Зеленая ипотека</button>
             <div class="message">
-                <img src="../Asar/img/message_icon.svg" alt="">
+                <img src="img/message_icon.svg" alt="">
             </div>
-            <img class="dom" src="../Asar/img/dom_icon.svg" alt="">
+            <img class="dom" src="img/dom_icon.svg" alt="">
         </div>
         <hr class="first_hr">
         <div class="Sheka">
@@ -61,12 +61,12 @@
                 <button>Выбрать квартиру</button>
             </div>
             <div class="Sheka_2">
-                <img src="../Asar/img/first_house.svg" alt="">
+                <img src="img/first_house.svg" alt="">
             </div>
         </div>
         <div class="map">
             <h1>Расположение и инфраструктура</h1>
-            <img src="../Asar/img/map.svg" alt="">
+            <img src="img/map.svg" alt="">
         </div>
         <div class="Construction_progress">
             <h1>Ход строительства</h1>
@@ -76,7 +76,7 @@
             <span class="span">2023</span>
         </div>
         <div class="woman">
-            <img class="woman_yellow" src="../Asar/img/yellow_block.svg" alt="">
+            <img class="woman_yellow" src="img/yellow_block.svg" alt="">
             <div class="woman_text">
                 <div class="woman_span">
                     <span class="woman_gray">Сентябрь</span>
@@ -101,15 +101,15 @@
                     </div>
                     <div class="woman_line"></div>
                     <div class="woman_line_2"></div>
-                    <img class="woman_img" src="../Asar/img/woman.svg" alt="">
+                    <img class="woman_img" src="img/woman.svg" alt="">
                 </div>
             </div>
         </div>
         <div class="Finishing_materials">
             <h1>Материалы отделки</h1>
             <div class="materials">
-                <img class="materials_img" src="../Asar/img/Big_house.svg" alt="">
-                <img class="materials_btn" src="../Asar/img/buttons_icons.svg" alt="">
+                <img class="materials_img" src="img/Big_house.svg" alt="">
+                <img class="materials_btn" src="img/buttons_icons.svg" alt="">
             </div>
         </div>
         <div class="Building_materials">
@@ -123,7 +123,7 @@
                     <p> Это пятиэтажный кирпичный дом, совмещающий в себе все удобства для <br> комфортного проживания.
                     </p>
                 </div>
-                <img class="block" src="../Asar/img/foundation.svg" alt="">
+                <img class="block" src="img/foundation.svg" alt="">
             </div>
         </div>
         <div class="mortgage">
@@ -193,13 +193,13 @@
             <hr class="last_hr">
         </div>
         <div class="Footer">
-            <img class="Footer_img" src="../Asar/img/OKS GROUP_gray.svg" alt="">
+            <img class="Footer_img" src="img/OKS GROUP_gray.svg" alt="">
             <div class="Footer_one">
-                <img class="phone_1" src="../Asar/img/phone_icon.svg" alt="">
-                <img class="phone_2" src="../Asar/img/pin_drop_icon.svg" alt="">
-                <img class="phone_3" src="../Asar/img/place_icon.svg" alt="">
-                <img class="phone_4" src="../Asar/img/chat_icon.svg" alt="">
-                <img class="phone_5" src="../Asar/img/instagram_icon.svg" alt="">
+                <img class="phone_1" src="img/phone_icon.svg" alt="">
+                <img class="phone_2" src="img/pin_drop_icon.svg" alt="">
+                <img class="phone_3" src="img/place_icon.svg" alt="">
+                <img class="phone_4" src="img/chat_icon.svg" alt="">
+                <img class="phone_5" src="img/instagram_icon.svg" alt="">
                 <p>+7 778 006 90 80</p>
                 <span>Микрорайон Нурсат, <br>
                     172а — ЖК Бахыт</span>
@@ -221,14 +221,14 @@
             </div>
             <div class="Footer_three">
                 <h1>Меню</h1>
-                <p>Проекты</p>
-                <p>Квартиры</p>
-                <p>Ипотека</p>
-                <p>Производство</p>
-                <p>О компании</p>
-                <p>Контакты</p>
+                <a href="../Main/Main.html">Проекты</a>
+                <a href="../Appartment/Appartment.html">Квартиры</a>
+                <a href="../Mortgage/Mortgage.html">Ипотека</a>
+                <a href="../Manufacturing/Manufacturing.html">Производство</a>
+                <a class="company" href="../About/About.html">О компании</a>
+                <a href="../Contact/Contact.html">Контакты</a>
             </div>
-            <img class="last_img" src="../Asar/img/Footer_icon.svg" alt="">
+            <img class="last_img" src="img/Footer_icon.svg" alt="">
         </div>
     </div>
     <script src="index.js"></script>
