--- a/OksGroup/Contact/Contact.html
+++ b/OksGroup/Contact/Contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="contacs.css">
+    <link rel="stylesheet" href="Contact.css">
     <title>Document</title>
 </head>
 
@@ -12,22 +12,22 @@
     <div class="Progect_contacs">
         <div class="Logo">
             <div class="Logo_OKS">
-                <img class="Logo_img" src="../Contact/img/OKS GROUP.svg" alt="">
-                <a class="blue a" href="">Проекты</a>
-                <a class="a" href="">Квартиры</a>
-                <a class="a" href="">Ипотека</a>
-                <a class="a" href="">Производство</a>
-                <a class="a" href="">О компании</a>
-                <a class="a" href="">Контакты</a>
+                <img class="Logo_img" src="img/OKS GROUP.svg" alt="">
+                <a class="blue" href="../Main/Main.html">Проекты</a>
+                <a class="" href="../Appartment/Appartment.html">Квартиры</a>
+                <a href="../Mortgage/Mortgage.html">Ипотека</a>
+                <a href="../Manufacturing/Manufacturing.html">Производство</a>
+                <a href="../About/About.html">О компании</a>
+                <a href="../Contact/Contact.html">Контакты</a>
                 <div class="whatchap">
-                    <img class="whatchap_img" src="../Contact/img/whatsap_icon.svg" alt="">
+                    <img class="whatchap_img" src="img/whatsap_icon.svg" alt="">
                     <span class="whatchap_number">+7 778 006 90 80</span>
                 </div>
                 <div class="language">
                     <span class="language_Ru">Ru</span>
                 </div>
                 <div class="heart">
-                    <img class="love" src="../Contact/img/heart_icon.svg" alt="">
+                    <img class="love" src="img/heart_icon.svg" alt="">
                 </div>
             </div>
         </div>
@@ -40,12 +40,12 @@
         </div>
         <div class="contact_block">
             <div class="block_one">
-                <img class="block_img" src="../Contact/img/map_icon.svg" alt="">
+                <img class="block_img" src="img/map_icon.svg" alt="">
                 <h1>Адрес</h1>
                 <p>РК, г. Шымкент, Нурсат 172А, торговый дом «BAQYT», 2 этаж</p>
             </div>
             <div class="block_two">
-                <img class="block_img" src="../Contact/img/new_phone_icon.svg" alt="">
+                <img class="block_img" src="img/new_phone_icon.svg" alt="">
                 <h1>Отдел продаж</h1>
                 <div class="block_two_a">
                     <a href="">+7 778 006 90 80</a>
@@ -53,21 +53,21 @@
                 </div>
             </div>
             <div class="block_three">
-                <img class="block_img" src="../Contact/img/email_icon.svg" alt="">
+                <img class="block_img" src="img/email_icon.svg" alt="">
                 <h1>E-mail</h1>
                 <a href="">sale@oks.group</a>
             </div>
-            <img class="constact_map" src="../Contact/img/map.svg" alt="">
+            <img class="constact_map" src="img/map.svg" alt="">
         </div>
         <hr class="last_hr">
         <div class="Footer">
-            <img class="Footer_img" src="../Contact/img/OKS GROUP_gray.svg" alt="">
+            <img class="Footer_img" src="img/OKS GROUP_gray.svg" alt="">
             <div class="Footer_one">
-                <img class="phone_1" src="../Contact/img/phone_icon.svg" alt="">
-                <img class="phone_2" src="../Contact/img/pin_drop_icon.svg" alt="">
-                <img class="phone_3" src="../Contact/img/place_icon.svg" alt="">
-                <img class="phone_4" src="../Contact/img/chat_icon.svg" alt="">
-                <img class="phone_5" src="../Contact/img/instagram_icon.svg" alt="">
+                <img class="phone_1" src="img/phone_icon.svg" alt="">
+                <img class="phone_2" src="img/pin_drop_icon.svg" alt="">
+                <img class="phone_3" src="img/place_icon.svg" alt="">
+                <img class="phone_4" src="img/chat_icon.svg" alt="">
+                <img class="phone_5" src="img/instagram_icon.svg" alt="">
                 <p>+7 778 006 90 80</p>
                 <span>Микрорайон Нурсат, <br>
                     172а — ЖК Бахыт</span>
@@ -89,14 +89,14 @@
             </div>
             <div class="Footer_three">
                 <h1>Меню</h1>
-                <p>Проекты</p>
-                <p>Квартиры</p>
-                <p>Ипотека</p>
-                <p>Производство</p>
-                <p>О компании</p>
-                <p>Контакты</p>
+                <a href="../Main/Main.html">Проекты</a>
+                <a href="../Appartment/Appartment.html">Квартиры</a>
+                <a href="../Mortgage/Mortgage.html">Ипотека</a>
+                <a href="../Manufacturing/Manufacturing.html">Производство</a>
+                <a class="company" href="../About/About.html">О компании</a>
+                <a href="../Contact/Contact.html">Контакты</a>
             </div>
-            <img class="last_img" src="../Contact/img/Footer_icon.svg" alt="">
+            <img class="last_img" src="img/Footer_icon.svg" alt="">
         </div>
     </div>
 </body>
