--- a/OksGroup/Form/Form.html
+++ b/OksGroup/Form/Form.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="write.css">
+    <link rel="stylesheet" href="Form.css">
 </head>
 
 <body>
     <div class="progect_write">
         <div class="write_to_us">
             <h1>Напишите нам</h1>
-            <img class="write_img" src="../write/img/message_icon.svg" alt="">
+            <img class="write_img" src="img/message_icon.svg" alt="">
         </div>
         <div class="write_inputs">
             <input class="input_value" type="text" placeholder="Имя">
@@ -29,7 +29,7 @@
         </div>
     </div>
     <div class="smile">
-        <img class="smile_image" src="../write/img/smile_icon.svg"alt="">
+        <img class="smile_image" src="img/smile_icon.svg"alt="">
         <h1>Спасибо за заявку,</h1>
         <p>наш менеджер скоро свяжется с вами!</p>
         <button>Закрыть</button>
