--- a/OksGroup/Manufacturing/Manufacturing.html
+++ b/OksGroup/Manufacturing/Manufacturing.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Production.css">
+    <link rel="stylesheet" href="Manufacturing.css">
     <title>Document</title>
 </head>
 
@@ -12,22 +12,22 @@
     <div class="progect_production">
         <div class="Logo">
             <div class="Logo_OKS">
-                <img class="Logo_img" src="../production/img/OKS GROUP.svg" alt="">
-                <a class="blue" href="">Проекты</a>
-                <a class="" href="">Квартиры</a>
-                <a href="">Ипотека</a>
-                <a href="">Производство</a>
-                <a href="">О компании</a>
-                <a href="">Контакты</a>
+                <img class="Logo_img" src="img/OKS GROUP.svg" alt="">
+                <a class="blue" href="../Main/Main.html">Проекты</a>
+                <a class="" href="../Appartment/Appartment.html">Квартиры</a>
+                <a href="../Mortgage/Mortgage.html">Ипотека</a>
+                <a href="../Manufacturing/Manufacturing.html">Производство</a>
+                <a href="../About/About.html">О компании</a>
+                <a href="../Contact/Contact.html">Контакты</a>
                 <div class="whatchap">
-                    <img class="whatchap_img" src="../production/img/whatsap_icon.svg" alt="">
+                    <img class="whatchap_img" src="img/whatsap_icon.svg" alt="">
                     <span class="whatchap_number">+7 778 006 90 80</span>
                 </div>
                 <div class="language">
                     <span class="language_Ru">Ru</span>
                 </div>
                 <div class="heart">
-                    <img class="love" src="../production/img/heart_icon.svg" alt="">
+                    <img class="love" src="img/heart_icon.svg" alt="">
                 </div>
             </div>
         </div>
@@ -40,48 +40,48 @@
         </div>
         <div class="Production_blocks">
             <div class="message">
-                <img src="../production/img/message_icon.svg" alt="">
+                <img src="img/message_icon.svg" alt="">
             </div>
             <div class="block">
-                <img class="production_img" src="../production/img/marble.svg" alt="">
+                <img class="production_img" src="img/marble.svg" alt="">
                 <h1 class="h1_blue">Железобетонные <br>изделия</h1>
                 <div class="block_yellow"></div>
             </div>
             <div class="block">
-                <img class="production_img" src="../production/img/components.svg" alt="">
+                <img class="production_img" src="img/components.svg" alt="">
                 <h1 class="h1_gray">Стеновые панели</h1>
                 <div class="block_gray"></div>
             </div>
             <div class="block">
-                <img class="production_img" src="../production/img/bricks.svg" alt="">
+                <img class="production_img" src="img/bricks.svg" alt="">
                 <h1 class="h1_gray">Мелкоштучные изделия</h1>
                 <div class="block_gray"></div>
             </div>
             <div class="block two">
-                <img class="production_img" src="../production/img/wall.svg" alt="">
+                <img class="production_img" src="img/wall.svg" alt="">
                 <h1 class="h1_gray">Реализация бетона</h1>
                 <div class="block_gray"></div>
             </div>
             <div class="block two">
-                <img class="production_img" src="../production/img/stones.svg" alt="">
+                <img class="production_img" src="img/stones.svg" alt="">
                 <h1 class="h1_gray">Инертные материалы</h1>
                 <div class="block_gray"></div>
             </div>
             <div class="block two">
-                <img class="production_img" src="../production/img/interior.svg" alt="">
+                <img class="production_img" src="img/interior.svg" alt="">
                 <h1 class="h1_gray">Пластиковые окна</h1>
                 <div class="block_gray"></div>
             </div>
         </div>
         <hr class="last_hr">
         <div class="Footer">
-            <img class="Footer_img" src="../production/img/OKS GROUP_gray.svg" alt="">
+            <img class="Footer_img" src="img/OKS GROUP_gray.svg" alt="">
             <div class="Footer_one">
-                <img class="phone_1" src="../production/img/phone_icon.svg" alt="">
-                <img class="phone_2" src="../production/img/place_icon.svg" alt="">
-                <img class="phone_3" src="../production/img/pin_drop_icon.svg" alt="">
-                <img class="phone_4" src="../production/img/chat_icon.svg"alt="">
-                <img class="phone_5" src="../production/img/instagram_icon.svg" alt="">
+                <img class="phone_1" src="img/phone_icon.svg" alt="">
+                <img class="phone_2" src="img/place_icon.svg" alt="">
+                <img class="phone_3" src="img/pin_drop_icon.svg" alt="">
+                <img class="phone_4" src="img/chat_icon.svg"alt="">
+                <img class="phone_5" src="img/instagram_icon.svg" alt="">
                 <p>+7 778 006 90 80</p>
                 <span>Микрорайон Нурсат, <br>
                     172а — ЖК Бахыт</span>
@@ -103,14 +103,14 @@
             </div>
             <div class="Footer_three">
                 <h1>Меню</h1>
-                <p>Проекты</p>
-                <p>Квартиры</p>
-                <p>Ипотека</p>
-                <p>Производство</p>
-                <p>О компании</p>
-                <p>Контакты</p>
+                <a href="../Main/Main.html">Проекты</a>
+                <a href="../Appartment/Appartment.html">Квартиры</a>
+                <a href="../Mortgage/Mortgage.html">Ипотека</a>
+                <a href="../Manufacturing/Manufacturing.html">Производство</a>
+                <a class="company" href="../About/About.html">О компании</a>
+                <a href="../Contact/Contact.html">Контакты</a>
             </div>
-            <img class="last_img" src="../production/img/Footer_icon.svg" alt="">
+            <img class="last_img" src="img/Footer_icon.svg" alt="">
         </div>
     </div>
 </body>
