--- a/OksGroup/Manufacturing/ModalInert/Wall_panels.html
+++ b/OksGroup/Manufacturing/ModalInert/Wall_panels.html
@@ -12,9 +12,9 @@
     <div class="Wall_panels">
         <h1 class="main_h1">Стеновые панели</h1>
         <div class="Wall_panels_block_img">
-            <img class="Wall_panels_img" src="../wall_panels/img/components.svg" alt="">
+            <img class="Wall_panels_img" src="img/components.svg" alt="">
             <div class="message">
-                <img src="../wall_panels/img/message_icon.svg" alt="">
+                <img src="img/message_icon.svg" alt="">
             </div>
         </div>
         <div class="Wall_panels_text">
