--- a/OksGroup/Main/Main.html
+++ b/OksGroup/Main/Main.html
@@ -5,54 +5,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Host.css">
+    <link rel="stylesheet" href="Main.css">
     <title>Document</title>
 </head>
 
 <body>
     <div class="Progect">
         <div class="Green_mort">
-            <img src="../Host/img_host/green_mortgage.svg" alt="">
-            <img class="green_img" src="../Host/img_host/cross.svg" alt="">
+            <img src="img/green_mortgage.svg" alt="">
+            <img class="green_img" src="img/cross.svg" alt="">
         </div>
         <div class="Logo">
             <div class="Logo_OKS">
-                <img class="Logo_img" src="../Host/img_host/OKS GROUP.svg" alt="">
-                <a class="blue" href="">Проекты</a>
-                <a class="" href="">Квартиры</a>
-                <a href="">Ипотека</a>
-                <a href="">Производство</a>
-                <a href="">О компании</a>
-                <a href="">Контакты</a>
+                <img class="Logo_img" src="img/OKS GROUP.svg" alt="">
+                <a class="blue" href="../Main/Main.html">Проекты</a>
+                <a class="" href="../Appartment/Appartment.html">Квартиры</a>
+                <a href="../Mortgage/Mortgage.html">Ипотека</a>
+                <a href="../Manufacturing/Manufacturing.html">Производство</a>
+                <a href="../About/About.html">О компании</a>
+                <a href="../Contact/Contact.html">Контакты</a>
                 <div class="whatchap">
-                    <img class="whatchap_img" src="../Host/img_host/whatsap_icon.svg" alt="">
+                    <img class="whatchap_img" src="img/whatsap_icon.svg" alt="">
                     <span class="whatchap_number">+7 778 006 90 80</span>
                 </div>
                 <div class="language">
                     <span class="language_Ru">Ru</span>
                 </div>
                 <div class="heart">
-                    <img class="love" src="../Host/img_host/heart_icon.svg" alt="">
+                    <img class="love" src="img/heart_icon.svg" alt="">
                 </div>
             </div>
         </div>
         <div class="Main_home">
-            <img src="../Host/img_host/Home_Preview.svg" alt="">
+            <img src="img/Home_Preview.svg" alt="">
             <button class="asar">Asar house Plus</button>
             <button class="asar">Старт продаж!</button>
             <button class="asar green">Зеленая ипотека</button>
-            <img class="alpha" src="../Host/img_host/AlphaRabi_line_white.svg" alt="">
+            <img class="alpha" src="img/AlphaRabi_line_white.svg" alt="">
             <div class="message">
-                <img src="../Host/img_host/message_icon.svg" alt="">
+                <img src="img/message_icon.svg" alt="">
             </div>
         </div>
         <hr>
         <div class="homes">
             <div class="one_home">
-                <img class="home_img" src="../Host/img_host/house_first_icon.svg" alt="">
+                <img class="home_img" src="img/house_first_icon.svg" alt="">
                 <button class="home_btn1">Квартал Туран</button>
                 <button class="home_btn2">Скоро!</button>
-                <img class="home_img_aplha" src="../Host/img_host/AlphaRabi_on_sale.svg" alt="">
+                <img class="home_img_aplha" src="img/AlphaRabi_on_sale.svg" alt="">
                 <div class="total_rooms">
                     <div class="rooms">
                         <span>1 - комнатные</span>
@@ -74,45 +74,44 @@
                     </div>
                 </div>
                 <button class="delatis">Подробнее</button>
-                <img class="check" src="../Host/img_host/occupation_line.svg" alt="">
+                <img class="check" src="img/occupation_line.svg" alt="">
             </div>
             <div class="two_home">
-                <img class="home_img2" src="../Host/img_host/house_second_icon.svg" alt="">
+                <img class="home_img2" src="img/house_second_icon.svg" alt="">
                 <button>Asar house Plus</button>
-                <button> <img class="center_bank" src="../Host/img_host/Bank.svg" alt="">centercredit</button>
-                <img class="home_alha2" src="../Host/img_host/AlphaRabi_line.svg" alt="">
+                <button> <img class="center_bank" src="img/Bank.svg" alt="">centercredit</button>
+                <img class="home_alha2" src="img/AlphaRabi_line.svg" alt="">
             </div>
         </div>
         <div class="homes_2">
             <div class="three_home">
-                <img class="three_home_img" src="../Host/img_host/house_third_house.svg" alt="">
+                <img class="three_home_img" src="img/house_third_house.svg" alt="">
                 <button class="home_btn1">Старт продаж!</button>
-                <img class="home_alha3" src="../Host/img_host/AlphaRabi_line.svg" alt="">
+                <img class="home_alha3" src="img/AlphaRabi_line.svg" alt="">
             </div>
             <div class="foth_home">
-                <img class="three_home_img" src="../Host/img_host/house_fourth_house.svg" alt="">
+                <img class="three_home_img" src="img/house_fourth_house.svg" alt="">
                 <button class="home_btn1">Старт продаж!</button>
-                <img class="home_alha4" src="../Host/img_host/AlphaRabi_line.svg" alt="">
+                <img class="home_alha4" src="img/AlphaRabi_line.svg" alt="">
             </div>
         </div>
         <div class="homes_3">
             <div class="five_home">
-                <img class="five_home_img" src="../Host/img_host/house_fourth_house.svg" alt="">
+                <img class="five_home_img" src="img/house_fourth_house.svg" alt="">
                 <button>Asar house Plus</button>
-                <button> <img class="center_bank" src="../Host/img_host/Bank.svg" alt="">centercredit</button>
-                <img class="home_alha5" src="../Host/img_host/AlphaRabi_line.svg" alt="">
-
+                <button> <img class="center_bank" src="img/Bank.svg" alt="">centercredit</button>
+                <img class="home_alha5" src="img/AlphaRabi_line.svg" alt="">
             </div>
             <div class="foth_home">
-                <img class="three_home_img" src="../Host/img_host/house_second_icon.svg" alt="">
+                <img class="three_home_img" src="img/house_second_icon.svg" alt="">
                 <button class="home_btn1">Старт продаж!</button>
-                <img class="home_alha4" src="../Host/img_host/AlphaRabi_line.svg" alt="">
+                <img class="home_alha4" src="img/AlphaRabi_line.svg" alt="">
             </div>
         </div>
         <div class="subscribe">
             <h1 class="sub_h1">Подпишитесь на наши обновления</h1>
             <input class="sub_input" type="text" placeholder="Введите ваш e-mail или телефон">
-            <img class="sub_img" src="../Host/img_host/arrow_icon.svg" alt="">
+            <img class="sub_img" src="img/arrow_icon.svg" alt="">
         </div>
         <div class="mortgage">
             <h1 class="mortgage_h1">Ипотека от 3,9%</h1>
@@ -180,13 +179,13 @@
             <hr class="last_hr">
         </div>
         <div class="Footer">
-            <img class="Footer_img" src="../Host/img_host/KS GROUP_gray.svg" alt="">
+            <img class="Footer_img" src="img/KS GROUP_gray.svg" alt="">
             <div class="Footer_one">
-                <img class="phone_1" src="../Host/img_host/phone_icon.svg" alt="">
-                <img class="phone_2" src="../Host/img_host/pin_drop_icon.svg" alt="">
-                <img class="phone_3" src="../Host/img_host/place_icon.svg" alt="">
-                <img class="phone_4" src="../Host/img_host/chat_icon.svg" alt="">
-                <img class="phone_5" src="../Host/img_host/instagram_icon.svg" alt="">
+                <img class="phone_1" src="img/phone_icon.svg" alt="">
+                <img class="phone_2" src="img/pin_drop_icon.svg" alt="">
+                <img class="phone_3" src="img/place_icon.svg" alt="">
+                <img class="phone_4" src="img/chat_icon.svg" alt="">
+                <img class="phone_5" src="img/instagram_icon.svg" alt="">
                 <p>+7 778 006 90 80</p>
                 <span>Микрорайон Нурсат, <br>
                     172а — ЖК Бахыт</span>
@@ -208,17 +207,17 @@
             </div>
             <div class="Footer_three">
                 <h1>Меню</h1>
-                <p>Проекты</p>
-                <p>Квартиры</p>
-                <p>Ипотека</p>
-                <p>Производство</p>
-                <p>О компании</p>
-                <p>Контакты</p>
+                <a href="../Main/Main.html">Проекты</a>
+                <a href="../Appartment/Appartment.html">Квартиры</a>
+                <a href="../Mortgage/Mortgage.html">Ипотека</a>
+                <a href="../Manufacturing/Manufacturing.html">Производство</a>
+                <a class="company" href="../About/About.html">О компании</a>
+                <a href="../Contact/Contact.html">Контакты</a>
             </div>
-            <img class="last_img" src="../Host/img_host/Footer_icon.svg" alt="">
+            <img class="last_img" src="img/Footer_icon.svg" alt="">
         </div>
     </div>
-    <!-- <script src="../index.js"></script> -->
+    <!-- <script src="index.js"></script> -->
 </body>
 
 </html>
