--- a/OksGroup/Mortgage/Mortgage.html
+++ b/OksGroup/Mortgage/Mortgage.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="bank.css">
+    <link rel="stylesheet" href="Mortgage.css">
     <title>Document</title>
 </head>
 
@@ -12,22 +12,22 @@
     <div class="Progect_3">
         <div class="Logo">
             <div class="Logo_OKS">
-                <img class="Logo_img" src="../bank/img/OKS GROUP.svg" alt="">
-                <a class="blue" href="">Проекты</a>
-                <a class="" href="">Квартиры</a>
-                <a href="">Ипотека</a>
-                <a href="">Производство</a>
-                <a href="">О компании</a>
-                <a href="">Контакты</a>
+                <img class="Logo_img" src="img/OKS GROUP.svg" alt="">
+                <a class="blue" href="../Main/Main.html">Проекты</a>
+                <a class="" href="../Appartment/Appartment.html">Квартиры</a>
+                <a href="../Mortgage/Mortgage.html">Ипотека</a>
+                <a href="../Manufacturing/Manufacturing.html">Производство</a>
+                <a href="../About/About.html">О компании</a>
+                <a href="../Contact/Contact.html">Контакты</a>
                 <div class="whatchap">
-                    <img class="whatchap_img" src="../bank/img/whatsap_icon.svg" alt="">
+                    <img class="whatchap_img" src="img/whatsap_icon.svg" alt="">
                     <span class="whatchap_number">+7 778 006 90 80</span>
                 </div>
                 <div class="language">
                     <span class="language_Ru">Ru</span>
                 </div>
                 <div class="heart">
-                    <img class="love" src="../bank/img/heart_icon.svg" alt="">
+                    <img class="love" src="img/heart_icon.svg" alt="">
                 </div>
             </div>
         </div>
@@ -40,7 +40,7 @@
         </div>
         <div class="family">
             <div class="family_block">
-                <img class="family_bank" src="../bank/img/family_bank.svg" alt="">
+                <img class="family_bank" src="img/family_bank.svg" alt="">
                 <div class="bank_procent">
                     <button class="bank_procent_btn1">30/70</button>
                     <button class="bank_procent_btn2">50/50</button>
@@ -79,7 +79,7 @@
                             </p>
                         </div>
                         <div class="message">
-                            <img src="../bank/img/message_icon.svg" alt="">
+                            <img src="img/message_icon.svg" alt="">
                         </div>
                     </div>
                 </div>
@@ -87,9 +87,9 @@
         </div>
         <div class="Freedom">
             <div class="Freedom_img_block">
-                <img src="../bank/img/freedom_bank.svg" alt="">
-                <img src="../bank/img/centerCredit_bank.svg" alt="">
-                <img src="../bank/img/Altyn_bank.svg" alt="">
+                <img src="img/freedom_bank.svg" alt="">
+                <img src="img/centerCredit_bank.svg" alt="">
+                <img src="img/Altyn_bank.svg" alt="">
             </div>
             <button class="bank_procent_btn5">Льготная ипотека «7-20-25»</button>
             <div class="Freedom_text">
@@ -104,7 +104,7 @@
             </div>
         </div>
         <div class="pricing">
-            <img class="pricing_img" src="../bank/img/OKS GROUP_yellow.svg" alt="">
+            <img class="pricing_img" src="img/OKS GROUP_yellow.svg" alt="">
             <div class="pricing_blocks">
                 <div class="block_one">
                     <h1>Рассрочка</h1>
@@ -133,13 +133,13 @@
         </div>
         <hr class="last_hr">
         <div class="Footer">
-            <img class="Footer_img" src="../bank/img/OKS GROUP_gray.svg" alt="">
+            <img class="Footer_img" src="img/OKS GROUP_gray.svg" alt="">
             <div class="Footer_one">
-                <img class="phone_1" src="../bank/img/phone_icon.svg" alt="">
-                <img class="phone_2" src="../bank/img/pin_drop_icon.svg" alt="">
-                <img class="phone_3" src="../bank/img/place_icon.svg" alt="">
-                <img class="phone_4" src="../bank/img/chat_icon.svg" alt="">
-                <img class="phone_5" src="../bank/img/instagram_icon.svg" alt="">
+                <img class="phone_1" src="img/phone_icon.svg" alt="">
+                <img class="phone_2" src="img/pin_drop_icon.svg" alt="">
+                <img class="phone_3" src="img/place_icon.svg" alt="">
+                <img class="phone_4" src="img/chat_icon.svg" alt="">
+                <img class="phone_5" src="img/instagram_icon.svg" alt="">
                 <p>+7 778 006 90 80</p>
                 <span>Микрорайон Нурсат, <br>
                     172а — ЖК Бахыт</span>
@@ -161,14 +161,14 @@
             </div>
             <div class="Footer_three">
                 <h1>Меню</h1>
-                <p>Проекты</p>
-                <p>Квартиры</p>
-                <p>Ипотека</p>
-                <p>Производство</p>
-                <p>О компании</p>
-                <p>Контакты</p>
+                <a href="../Main/Main.html">Проекты</a>
+                <a href="../Appartment/Appartment.html">Квартиры</a>
+                <a href="../Mortgage/Mortgage.html">Ипотека</a>
+                <a href="../Manufacturing/Manufacturing.html">Производство</a>
+                <a class="company" href="../About/About.html">О компании</a>
+                <a href="../Contact/Contact.html">Контакты</a>
             </div>
-            <img class="last_img" src="../bank/img/Footer_icon.svg" alt="">
+            <img class="last_img" src="img/Footer_icon.svg" alt="">
         </div>
     </div>
 </body>
